--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
+    "@supabase/auth-helpers-nextjs": "^0.8.1",
+    "@supabase/supabase-js": "^2.38.4",
     "@types/mapbox-gl": "^2.7.15",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
@@ -29,6 +31,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.41.2",
     "@types/bcryptjs": "^2.4.5",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.33",
